--- a/pages/tab-bar/index/index.wxss
+++ b/pages/tab-bar/index/index.wxss
@@ -1,3 +1,8 @@
+.check-in-config-panel {
+    height: 10vh;
+    font-size: 40rpx;
+}
+
 .config-check-in-time {
     display: inline-block;
     width: 100%;
@@ -6,30 +11,37 @@
 .config-work-time {
     text-align: center;
     display: inline-block;
-    font-size: 40rpx;
 }
 
 .check-in-panel {
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    height: 90vh;
 }
 
 .check-in-btn {
-    background-image: linear-gradient(rgb(83,168,255), #518f9f);
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: linear-gradient(180deg, #00a0e9 0%, #0095e9 73%, #0089e9 100%);
     width: 400rpx;
     height: 400rpx;
     border-radius: 50%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
-    box-shadow: 2px #518f9f;
+    box-shadow: 0 0 10rpx 0rpx #0089e9;
 }
 
 .check-in-btn-text {
     font-size: 60rpx;
     line-height: 34rpx;
     color: #ffffff;
+}
+
+.now-time {
+    font-size: 30rpx;
+    line-height: 34rpx;
+    color: #8cd7fe;
+    margin-top: 30rpx;
 }
