--- a/pages/tab-bar/index/index.wxml
+++ b/pages/tab-bar/index/index.wxml
@@ -1,27 +1,27 @@
 <view class="container">
-    <view class="check-in-config-panel">
-        <view wx:if="{{!checkInTimeConfig}}">
-            <view>今天无需打卡哦~</view>
-        </view>
-        <view wx:else class="config-check-in-time">
-            <view class="config-work-time" style="width: 50%">
-                <view>上班打卡时间</view>
-                <view style="font-size: 35rpx; color: {{ workInTimeColor }}">
-                    {{ checkInTimeConfig.workInTime }}
-                </view>
-            </view>
-            <view class="config-work-time" style="width: 50%">
-                <view>下班打卡时间</view>
-                <view style="font-size: 35rpx; color: {{ workOutTimeColor }}">
-                    {{ checkInTimeConfig.workOutTime }}
-                </view>
-            </view>
-        </view>
+  <view class="check-in-config-panel">
+    <view wx:if="{{!checkInTimeConfig}}">
+      <view>今天无需打卡哦~</view>
     </view>
-    <view class="check-in-panel">
-        <view class="check-in-btn" bindtap="checkIn">
-            <view class="check-in-btn-text">打卡</view>
-            <view class="now-time">{{time}}</view>
+    <view wx:else class="config-check-in-time">
+      <view class="config-work-time" style="width: 50%;">
+        <view>上班打卡时间</view>
+        <view style="font-size: 35rpx; color: {{ workInTimeColor }}">
+          {{ checkInTimeConfig.workInTime }}
         </view>
+      </view>
+      <view class="config-work-time" style="width: 50%;">
+        <view>下班打卡时间</view>
+        <view style="font-size: 35rpx; color: {{ workOutTimeColor }}">
+          {{ checkInTimeConfig.workOutTime }}
+        </view>
+      </view>
     </view>
+  </view>
+  <view class="check-in-panel">
+    <view class="check-in-btn" bindtap="checkIn">
+      <view class="check-in-btn-text">打卡</view>
+      <view class="now-time">{{time}}</view>
+    </view>
+  </view>
 </view>
